* MOD: final touches

--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Backbone.js • TodoMVC</title>
+                <title>Employee onboarding checklist</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 	</head>
 	<body>
 		<section id="todoapp">
 			<header id="header">
-				<h1>todos</h1>
+				<h1>onboarding checklist</h1>
 				<input id="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<section id="main">
@@ -20,9 +20,10 @@
 			<footer id="footer"></footer>
 		</section>
 		<footer id="info">
-			<p>Double-click to edit a todo</p>
-			<p>Written by <a href="https://github.com/addyosmani">Addy Osmani</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+			<p>More on these items <a href="http://smblms.posthaven.com/7-things-to-do-when-a-new-hire-starts-at-your-company">here</a>.</p>
+			<p>This app is created by <a href="http://twitter.com/takacsv">takacsv</a> as part of the learning management systems for small and medium businesses <a href="http://smblms.posthaven.com">blog.</a></p>
+                        <p><a href="http://smblms.posthaven.com">smblms.posthaven.com</a></p>
+			<p>The original Todo App this work is based on is written by <a href="https://github.com/addyosmani">Addy Osmani</a> and is part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<script type="text/template" id="item-template">
 			<div class="view">
